# NebriPop

./: .env.example  .gitignore  AGENTS.md  AI_WORKFLOW.md  PROMPTS_LOG.md  README.md  RULES.md  append_reviewer.py  skills-lock.json
backend/: Cargo.toml  README.md
backend/src/: config.rs  db.rs  errors.rs  main.rs  models.rs
backend/src/dto/: auth_dto.rs  favorite_dto.rs  message_dto.rs  mod.rs  product_dto.rs  user_dto.rs
backend/src/handlers/: auth_handler.rs  categories_handler.rs  favorites_handler.rs  health_handler.rs  messages_handler.rs  mod.rs  products_handler.rs  users_handler.rs
backend/src/repositories/: category_repository.rs  favorite_repository.rs  message_repository.rs  mod.rs  product_repository.rs  user_repository.rs
backend/src/routes/: auth.rs  favorites.rs  messages.rs  mod.rs  users.rs
database/: README.md  nebripop.db  schema.sql  seeds.sql  update_db.py
docs/: AGENT_FLOW_TEST.md  API_DOCS.md  ARCHITECTURE.md  AUTH_BASIC.md  BACKEND_ARCHITECTURE.md  BACKEND_CALCULADORA_TEST.md  DATABASE_DECISIONS.md  DATABASE_SCHEMA.md  DEVOPS_GUIDE.md  DEVOPS_PRE_MVP_SQLITE.md  ENVIRONMENT_SETUP.md  FINAL_CHECKLIST.md  FINAL_REPORT.md  FRONTEND_ARCHITECTURE.md  IMAGE_UPLOAD.md  PRD.md  (+64 more)
experiments/fullstack_calculator_fusion/frontend/: Cargo.toml  index.html
experiments/fullstack_calculator_fusion/frontend/src/: main.rs
experiments/pre_mvp_nebripop_sqlite/backend/: Cargo.toml
experiments/pre_mvp_nebripop_sqlite/backend/src/: main.rs
frontend/: Cargo.toml  README.md  index.html  styles.css
frontend/src/: app.rs  main.rs
frontend/src/api/: auth_api.rs  categories_api.rs  client.rs  favorites_api.rs  messages_api.rs  mod.rs  products_api.rs  users_api.rs
frontend/src/components/: error_message.rs  favorite_button.rs  loading.rs  mod.rs  product_card.rs  product_filter.rs  search_bar.rs
frontend/src/models/: auth.rs  category.rs  favorite.rs  message.rs  mod.rs  product.rs  user.rs
frontend/src/pages/: contact.rs  conversation.rs  create_product.rs  edit_product.rs  favorites.rs  home.rs  login.rs  messages.rs  mod.rs  product_detail.rs  profile.rs  register.rs  user_products.rs
(+59 files in other folders)
