[package]
name = "nebripop-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "multipart"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-net = "0.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "FileList", "File", "FormData", "Window", "Storage", "console"] }
urlencoding = "2.1.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
